testsuite/tests/th/T5358.stderr
T5358.hs:7:1: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘t1 -> t1’
    • The equation for ‘t1’ has one visible argument,
        but its type ‘Int’ has none

T5358.hs:8:1: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘t0 -> t0’
    • The equation for ‘t2’ has one visible argument,
        but its type ‘Int’ has none

T5358.hs:10:13: error: [GHC-83865]
    • Couldn't match expected type ‘t -> a0’ with actual type ‘Int’
    • The function ‘t1’ is applied to one visible argument,
        but its type ‘Int’ has none
      In the first argument of ‘(==)’, namely ‘t1 x’
      In the expression: t1 x == t2 x
    • Relevant bindings include
        x :: t (bound at T5358.hs:10:9)
        prop_x1 :: t -> Bool (bound at T5358.hs:10:1)

T5358.hs:10:21: error: [GHC-83865]
    • Couldn't match expected type ‘t -> a0’ with actual type ‘Int’
    • The function ‘t2’ is applied to one visible argument,
        but its type ‘Int’ has none
      In the second argument of ‘(==)’, namely ‘t2 x’
      In the expression: t1 x == t2 x
    • Relevant bindings include
        x :: t (bound at T5358.hs:10:9)
        prop_x1 :: t -> Bool (bound at T5358.hs:10:1)

T5358.hs:14:12: error: [GHC-87897]
    • Exception when trying to run compile-time code:
        runTest called error: forall {t_0 :: *} . t_0 -> GHC.Types.Bool
      Code: (do VarI _ t _ <- reify (mkName "prop_x1")
                error $ ("runTest called error: " ++ pprint t))
    • In the untyped splice:
        $(do VarI _ t _ <- reify (mkName "prop_x1")
             error $ ("runTest called error: " ++ pprint t))

